--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/localize": "^19.0.6",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/router": "^19.0.0",
+    "@angular/animations": "19.0.6",
+    "@angular/common": "19.0.6",
+    "@angular/compiler": "19.0.6",
+    "@angular/core": "19.0.6",
+    "@angular/forms": "19.0.6",
+    "@angular/localize": "19.0.6",
+    "@angular/platform-browser": "19.0.6",
+    "@angular/platform-browser-dynamic": "19.0.6",
+    "@angular/router": "19.0.6",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
@@ -28,9 +28,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.7",
-    "@angular/cli": "^19.0.7",
-    "@angular/compiler-cli": "^19.0.0",
+    "@angular-devkit/build-angular": "19.0.6",
+    "@angular/cli": "19.0.6",
+    "@angular/compiler-cli": "19.0.6",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
